    will be removed from Debian soon.
  * Also removing support for LDAP for now, unless someone comes up ready
    to maintain it in a proper shape (closes: #237229, #241389, #296399,
    #296507, #372260, #378616).
  * Added dummy password for the gforge_mta PostgreSQL user, since it no
    longer seems possible to use an empty password.

 -- Roland Mas <lolando@debian.org>  Fri, 18 May 2007 11:29:59 +0200

gforge (4.5.14-25+963) unstable; urgency=low

  * Merged Branch_4_5 into trunk after svn conversion
  essentially debian and deb-specific dir, setup and install-apache.sh too
  * Separated gforge-web-apache in gforge-web-apache and gforge-web-apache2
  * Added support for php5
  * Don't setup ssl if certifcate are not there
  * Added dsf_helper/patch-apache.* 
  * Added a update_with_sql function in db-upgrade.pl and get in sync with
    latest db/*.sql
  * Fixed many typos in templates so lintian is happy
  * Removed php4 dependancies for gforge-db-postgresql and reordered
    postgresql one
  * Install plugins with gforge-web-apache 
  * Added mediawiki support
  * Increase version in db-upgrade.pl not to clash with 4.5 branch

 -- Christian Bayle <bayle@debian.org>  Sat, 30 Sep 2006 20:48:24 +0200

gforge (4.5.14-10+3) unstable; urgency=low

  * [Roland] Updated Dutch debconf templates translation, from Bart
    Cornelis <cobaco@skolelinux.no> (closes: #384150).
  * [Roland] debian/rules: also remove binary files coming from uu-files
    coming from patches on clean.
  * [Roland] db-upgrade.pl: Fixed conversion of the Resolution field to
    the extra-fields system.

 -- Roland Mas <lolando@debian.org>  Sun,  3 Sep 2006 21:52:54 +0200

gforge (4.5.14-10) unstable; urgency=low

  * [Roland] Fixed control file (it referenced a gforge-plugin-scmcase
    package that never existed, rather than -scmccase).
  * [Roland] Updated from CVS.
  * [Roland] Updated French debconf templates translation, from Christian